--- a/src/app/components/authentication/register/register.component.html
+++ b/src/app/components/authentication/register/register.component.html
@@ -1,1 +1,73 @@
-<p>register works!</p>
+<section class="h-100">
+  <div class="container-fluid container-xxl d-flex align-items-center h-100">
+    <div class="row align-items-center">
+      <div class="col-7">
+        <div class="img-wrapper">
+          <img src="assets/images/background.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-md-5 d-flex align-items-center form-wrapper">
+        <form [formGroup]="signUpForm" class="w-100 p-4 shadow rounded">
+          <h3 class="mb-2 text-center">Добро пожаловать в <span class="text-danger">Astana Motors Logistic</span></h3>
+          <span class="d-inline-block mb-2 text-center w-100 subtitle">Создайте свою учетную запись</span>
+          <div class="mb-3">
+            <label for="email" class="form-label">Емейл</label>
+            <input
+              formControlName="email"
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="name@example.com"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="phone" class="form-label">Телефон</label>
+            <input
+              formControlName="phone"
+              type="tel"
+              class="form-control"
+              id="phone"
+              placeholder="+7"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Пароль</label>
+            <input
+              formControlName="password"
+              placeholder="******"
+              type="password"
+              class="form-control"
+              id="password"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="passwordConfirm" class="form-label">Повторите пароль</label>
+            <input
+              formControlName="passwordConfirm"
+              placeholder="******"
+              type="password"
+              class="form-control"
+              id="passwordConfirm"
+            />
+          </div>
+          <div class="form-check">
+            <input
+              formControlName="isConsent"
+              type="checkbox"
+              class="mb-3 form-check-input"
+              id="consent"
+              [defaultChecked]="false"
+            />
+            <label for="consent" class="form-check-label">Я, даю согласие на обработку персональных данных при регистрации.</label>
+          </div>
+          <button type="submit" class="btn btn-primary w-100 mt-3 mb-3" [disabled]="signUpForm.invalid" (click)="register()">Создать аккаунт</button>
+          <div class="w-100 text-center">
+            <span>Уже есть аккаунт?
+              <a [routerLink]="'/login'" class="form-label text-danger">Войти в аккаунт</a>
+            </span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
