--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,1 +1,28 @@
-<p>faq works!</p>
+<div class="faq header-padding">
+  <div class="container container-xxl">
+  <div class="faq-header text-center mt-4">
+    <h1 class="faq-title">Часто задаваемые вопросы</h1>
+    <p class="faq-subtitle">Мы собрали ответы на самые популярные вопросы наших клиентов.</p>
+  </div>
+
+  <div class="faq-list">
+    <accordion>
+      <accordion-group heading="Первый вопрос?" class="faq-item">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </accordion-group>
+
+      <accordion-group heading="Второй вопрос?" class="faq-item">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </accordion-group>
+
+      <accordion-group heading="Третий вопрос?" class="faq-item">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </accordion-group>
+
+      <accordion-group heading="Четвёртый вопрос?" class="faq-item">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      </accordion-group>
+    </accordion>
+  </div>
+  </div>
+</div>
