--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,125 @@
-<p>home works!</p>
+<div class="home header-padding">
+  <div class="form d-flex align-items-center mb-4">
+    <div class="form-container">
+      <h1 class="text-center mb-4">
+        Первый в Казахстане сервис по доставке авто<br> Астана Моторс
+      </h1>
+      <div class="card mx-auto">
+        <div class="card-body">
+          <h5 class="card-title text-center mb-4">Расчет стоимости перевозки</h5>
+          <div class="divider mb-4"></div>
+          <form [formGroup]="form">
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="brand" class="form-label">Марка авто *</label>
+                <select class="form-select form-control" id="brand" formControlName="brand">
+                  <option value="">Выберите марку</option>
+                  <option *ngFor="let brand of brands" [value]="brand">{{ brand }}</option>
+                </select>
+              </div>
+
+              <div class="col-md-6 mb-3">
+                <label for="model" class="form-label">Модель авто *</label>
+                <select class="form-select form-control" id="model" formControlName="model">
+                  <option value="">Нет моделей</option>
+                  <option *ngFor="let model of models" [value]="model">{{ model }}</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="departureCity" class="form-label">Город отправления *</label>
+                <select class="form-select form-control" id="departureCity" formControlName="departureCity">
+                  <option value="">Выберите город</option>
+                  <option *ngFor="let city of cities" [value]="city">{{ city }}</option>
+                </select>
+              </div>
+
+              <div class="col-md-6 mb-3">
+                <label for="departureCity" class="form-label">Город прибытия *</label>
+                <select class="form-select form-control" id="arrivalCity" formControlName="arrivalCity">
+                  <option value="">Выберите город</option>
+                  <option *ngFor="let city of cities" [value]="city">{{ city }}</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="departureDate" class="form-label">Желаемая дата отправки *</label>
+                <input type="date" class="form-control" id="departureDate" formControlName="desiredDate" />
+              </div>
+
+              <div class="col-md-6 mb-3">
+                <label for="phone" class="form-label">Телефон *</label>
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="phone"
+                  formControlName="phone"
+                  placeholder="+7 (___) ___-____"
+                />
+              </div>
+            </div>
+            <div class="d-grid mt-4">
+              <button type="submit" class="btn btn-primary" [disabled]="form.invalid" (click)="sendForm()">
+                Отправить заявку на расчет
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container container-xxl">
+    <section class="work-description">
+      <h3 class="text-center mb-4">Как мы работаем</h3>
+      <div class="row text-center d-flex justify-content-center">
+        <div class="col-md-2">
+          <img src="/assets/icons/car_icon.png" alt="Car" class="img-fluid mb-3">
+          <p>Укажите авто и маршрут</p>
+        </div>
+        <div class="col-md-2">
+          <img src="assets/icons/phone_icon.png" alt="Phone" class="img-fluid mb-3">
+          <p>Выберите лучший тариф</p>
+        </div>
+        <div class="col-md-2">
+          <img src="assets/icons/laptop_icon.png" alt="Laptop" class="img-fluid mb-3">
+          <p>Введите личные данные</p>
+        </div>
+        <div class="col-md-2">
+          <img src="assets/icons/money_icon.png" alt="Money" class="img-fluid mb-3">
+          <p>Оплатите перевозку</p>
+        </div>
+        <div class="col-md-2">
+          <img src="assets/icons/time_icon.png" alt="Time" class="img-fluid mb-3">
+          <p>Получите авто в срок</p>
+        </div>
+      </div>
+    </section>
+    <section class="company py-5">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h2 class="font-weight-bold mb-4">ASTANA MOTORS LOGISTICS - СЕРВИС ДОСТАВКИ АВТО</h2>
+          <p>Astana Motors Logistics – перевозка легковых автомобилей.</p>
+          <p>Миссия нашей компании – Удовлетворение потребностей клиента по перевозке легковых автомобилей на высоком профессиональном уровне, предоставление полного спектра услуг, в короткие сроки и по справедливой цене.</p>
+          <p>Транспортная компания ТОО "Astana Motors Logistics" работает на рынке перевозок легковых автомобилей с 2022 года.</p>
+
+          <h4>Наши преимущества:</h4>
+          <ul>
+            <li>Наличие собственного парка автовозов</li>
+            <li>Движение по расписанию с точностью до часа</li>
+            <li>Партнёры в регионах работающие по стандартам</li>
+            <li>On-line продажи билетов на автозвоз</li>
+            <li>Страхование ответственности перевозчика входит в стоимость перевозки</li>
+          </ul>
+        </div>
+
+        <div class="col-md-6">
+          <img src="/assets/images/img_1.png" alt="Truck" class="img-fluid d-block">
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
