--- a/src/app/components/structual/footer/footer.component.html
+++ b/src/app/components/structual/footer/footer.component.html
@@ -1,1 +1,52 @@
-<p>footer works!</p>
+<footer class="footer pb-0">
+  <div class="container-fluid container-xxl">
+    <div class="footer__content">
+      <div class="footer__section footer__section_logo mb-0">
+        <img src="assets/icons/logo.png" alt="AML logo" class="footer__logo mb-0">
+        <p class="footer__text pt-0">
+          Перевозка автомобилей.<br>
+          Мы обеспечиваем наивысший уровень сервиса для наших клиентов!
+        </p>
+      </div>
+      <div class="footer__section">
+        <ul class="footer__list">
+          <li><a href="https://astana-motors-logistics.kz/documents/ДоговорОферты.pdf" class="footer__link">Договор Оферты</a></li>
+          <li><a href="https://astana-motors-logistics.kz/documents/Политика.pdf" class="footer__link">Политика Конфиденциальности</a></li>
+          <li><a href="https://astana-motors-logistics.kz/documents/ПравилаВозврата.pdf" class="footer__link">Правила возврата</a></li>
+          <li><a href="https://astana-motors-logistics.kz/documents/ПроцедураОплаты.pdf" class="footer__link">Процедура оплаты</a></li>
+          <li><a href="/faq" class="footer__link">FAQ</a></li>
+        </ul>
+      </div>
+      <div class="footer__section">
+        <h5 class="footer__title">Контакты</h5>
+        <p class="footer__text">
+          <strong>Телефон:</strong> +7 771 790 57 68<br>
+          +7 771 949 99 94<br>
+          <strong>Email:</strong> {{ 'info@aml.com' }}
+        </p>
+        <p class="footer__text">
+          <strong>Адрес:</strong>
+          Казахстан, город Алматы, Розыбакиева 263
+        </p>
+      </div>
+      <div class="footer__section footer__section_socials">
+        <h5 class="footer__title">Обратная связь</h5>
+        <div class="footer__socials">
+          <a href="https://www.instagram.com/astana_motors/" class="footer__social-link"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/+77717905768" class="footer__social-link"><i class="bi bi-whatsapp"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer__bottom py-2">
+    <p class="footer__copyright">© 2024 AML. Все права защищены.</p>
+    <div>
+      <p style="font-size: 10px;" class="mb-0">
+        Powered by
+        <a href="https://whynet.agency/" target="_blank">
+          <img style="height: 15px; margin: -5px 5px; opacity: 1; width: auto" src="assets/icons/logo_wn_light.png">
+        </a>
+      </p>
+    </div>
+  </div>
+</footer>
