--- a/src/app/components/structual/header/header.component.html
+++ b/src/app/components/structual/header/header.component.html
@@ -65,7 +65,7 @@
           </li>
           <li class="nav-item" [class.active]="currentRoute === 'vacancies'" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <a class="nav-link"
-               (click)="navigateTo('/v')"
+               (click)="navigateTo('/careers')"
             >
               Вакансии
             </a>
@@ -83,19 +83,19 @@
         @if (authService.isUserLoggedIn | async) {
           <div class="btn-group align-items-center" dropdown [insideClick]="true" placement="bottom center">
             <button dropdownToggle class="header__button header__button_user">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-              </svg>
+              <a [routerLink]="'/account'">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                </svg>
+              </a>
             </button>
             <ul *dropdownMenu class="dropdown-menu" role="menu">
               <li role="menuitem" class="dropdown-item pe-none">
                 {{ (authService.user | async)?.email }}
               </li>
               <li class="divider dropdown-divider"></li>
-              <li role="menuitem"><a class="dropdown-item" href="/exchange-account">Account</a></li>
-              <!--<li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
-              <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>-->
+              <li role="menuitem"><a class="dropdown-item" [routerLink]="'/account'">Account</a></li>
               <li class="divider dropdown-divider"></li>
               <li role="menuitem" class="d-flex justify-content-center">
                 <button (click)="authService.signOut()" class="button__main button__main-small button__main-black-outline">
@@ -108,7 +108,7 @@
           <button (click)="navigateTo('login')" class="btn btn-primary">
             Войти
           </button>
-          <button (click)="navigateTo('register')" class="btn btn-primary">
+          <button (click)="navigateTo('sign-up')" class="btn btn-primary">
             Создать Аккаунт
           </button>
         }
