--- a/src/app/components/authentication/login/login.component.scss
+++ b/src/app/components/authentication/login/login.component.scss
@@ -3,9 +3,10 @@
   height: 100vh;
 
   .img-wrapper {
-    height: 100%;
+    height: calc(100vh - 200px);
+
     img {
-      max-width: 100%;
+      width: 100%;
       object-fit: cover;
       height: 100%;
       border-radius: 53px;
