--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -1,1 +1,90 @@
-<p>payment works!</p>
+<div class="payment header-padding">
+  <div class="container">
+    <div class="payment-header">
+      <div class="overlay">
+        <span class="title">Lorem ipsum dolor</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+    <section class="payment-steps">
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <div class="steps-container">
+        <div class="step">
+          <div class="icon">1</div>
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula nisl sit amet facilisis cursus.</p>
+        </div>
+        <div class="step">
+          <div class="icon">2</div>
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula nisl sit amet facilisis cursus.</p>
+        </div>
+        <div class="step">
+          <div class="icon">3</div>
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula nisl sit amet facilisis cursus.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="payment-methods">
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <div class="methods-container">
+        <div class="method">
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="method">
+          <h3>Lorem ipsum dolor</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        <div class="method">
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="payment-benefits">
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <div class="benefits-container">
+        <div class="benefit">
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="benefit">
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="benefit">
+          <h3>Lorem ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="payment-faq">
+      <h2>Lorem ipsum dolor sit amet</h2>
+      <div class="faq-container">
+        <div class="faq-item">
+          <h3>Lorem ipsum dolor sit amet?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="faq-item">
+          <h3>Lorem ipsum dolor sit amet?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="faq-item">
+          <h3>Lorem ipsum dolor sit amet?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-support">
+      <h2>Lorem ipsum dolor sit amet?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <a href="#" class="btn">Lorem ipsum dolor</a>
+    </section>
+  </div>
+</div>
